--- a/ChangeLog
+++ b/ChangeLog
@@ -1,21 +1,58 @@
 Author: Girish Palya <girishji@gmail.com>
-Date:   Fri, 03 Jun 2022 19:53:16 +0200
+Date:   Fri, 10 Jun 2022 13:11:12 +0200
 
-Initial commit
+Added PCB for full keyboard
 
 
  M .gitignore
-A  Optical_Parts.pretty/Everlight_IR_IR12-21C_TR8.kicad_mod
-A  Optical_Parts.pretty/Everlight_PT_PT12-21C_TR8.kicad_mod
-A  Optical_Parts.pretty/Gateron_Optical_Switch.kicad_mod
-A  Optical_Parts.pretty/MountingHole_1.2mm_M1.kicad_mod
-A  Optical_Parts.pretty/TestPoint_THTPad_1.0x1.5mm_Drill0.5mm.kicad_mod
-A  Optical_Parts.pretty/TestPoint_THTPad_1.0x2.5mm_Drill0.5mm.kicad_mod
-A  fp-lib-table
-A  optical-amoeba.kicad_pcb
-A  optical-amoeba.kicad_prl
-A  optical-amoeba.kicad_pro
-A  optical-amoeba.kicad_sch
+A  OpticalSymbols_Library.kicad_sym
+A  Optical_Parts.pretty/BlackPill_STLINK.kicad_mod
+M  Optical_Parts.pretty/Everlight_IR_IR12-21C_TR8.kicad_mod
+M  Optical_Parts.pretty/Everlight_PT_PT12-21C_TR8.kicad_mod
+M  Optical_Parts.pretty/Gateron_Optical_Switch.kicad_mod
+A  Optical_Parts.pretty/Gateron_Switch_Basic.kicad_mod
+A  Optical_Parts.pretty/Switch_Cutout.kicad_mod
+A  Optical_Parts.pretty/Switch_Cutout_1.25u.kicad_mod
+A  Optical_Parts.pretty/Switch_Cutout_1.5u.kicad_mod
+A  Optical_Parts.pretty/Switch_Cutout_1.75u.kicad_mod
+M  README.md
+A  keyboard-pcb/.gitignore
+A  keyboard-pcb/fp-lib-table
+A  keyboard-pcb/keyboard-pcb.kicad_pcb
+A  keyboard-pcb/keyboard-pcb.kicad_prl
+A  keyboard-pcb/keyboard-pcb.kicad_pro
+A  keyboard-pcb/keyboard-pcb.kicad_sch
+A  keyboard-pcb/placefp.py
+A  keyboard-pcb/switch.kicad_sch
+A  keyboard-pcb/sym-lib-table
+M  optical-amoeba.kicad_pcb
+M  optical-amoeba.kicad_sch
+A  switch-cutout/.gitignore
+A  switch-cutout/fp-lib-table
+A  switch-cutout/switch-cutout.kicad_pcb
+A  switch-cutout/switch-cutout.kicad_prl
+A  switch-cutout/switch-cutout.kicad_pro
+A  switch-cutout/switch-cutout.kicad_sch
+A  sym-lib-table
+
+commit 972d8f2e7509bd0437cb5f2fa82631b5c19e0bf6
+Author: Girish Palya <girishji@gmail.com>
+Date:   Fri Jun 3 19:53:16 2022 +0200
+
+    Initial commit
+    
+     M .gitignore
+    A  Optical_Parts.pretty/Everlight_IR_IR12-21C_TR8.kicad_mod
+    A  Optical_Parts.pretty/Everlight_PT_PT12-21C_TR8.kicad_mod
+    A  Optical_Parts.pretty/Gateron_Optical_Switch.kicad_mod
+    A  Optical_Parts.pretty/MountingHole_1.2mm_M1.kicad_mod
+    A  Optical_Parts.pretty/TestPoint_THTPad_1.0x1.5mm_Drill0.5mm.kicad_mod
+    A  Optical_Parts.pretty/TestPoint_THTPad_1.0x2.5mm_Drill0.5mm.kicad_mod
+    A  fp-lib-table
+    A  optical-amoeba.kicad_pcb
+    A  optical-amoeba.kicad_prl
+    A  optical-amoeba.kicad_pro
+    A  optical-amoeba.kicad_sch
 
 commit 84367ba83b915e725cbbc370f7a654c621c2f93a
 Author: gp <girishji@gmail.com>
